src/program/snapshots/quil_rs__program__graphviz_dot__tests__graph__different_frames_nonblocking.snap
---
source: src/program/graphviz_dot.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="frame"];
    "block_0_start" -> "block_0_1" [label="frame"];
    "block_0_start" -> "block_0_2" [label="frame"];
    "block_0_start" -> "block_0_end" [label="ordering"];
    "block_0_0" [shape=rectangle, label="[0] NONBLOCKING PULSE 0 \"rf\" test(duration: 1000000.0)"];
    "block_0_0" -> "block_0_end" [label="frame"];
    "block_0_1" [shape=rectangle, label="[1] NONBLOCKING PULSE 1 \"rf\" test(duration: 1000000.0)"];
    "block_0_1" -> "block_0_end" [label="frame"];
    "block_0_2" [shape=rectangle, label="[2] NONBLOCKING PULSE 2 \"rf\" test(duration: 1000000.0)"];
    "block_0_2" -> "block_0_end" [label="frame"];
    "block_0_end" [shape=circle, label="end"];
  }
}

