src/program/snapshots/quil_rs__program__graphviz_dot__tests__graph__fence_all.snap
---
source: src/program/graphviz_dot.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_end" [label="ordering"];
    "block_0_0" [shape=rectangle, label="[0] FENCE"];
    "block_0_end" [shape=circle, label="end"];
  }
}

