src/program/snapshots/quil_rs__program__graphviz_dot__tests__graph__labels_only.snap
---
source: src/program/graphviz_dot.rs
expression: dot_format
---
digraph {
  entry -> "a_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="a";
    node [style="filled"];
    "a_start" [shape=circle, label="start"];
    "a_start" -> "a_end" [label="ordering"];
    "a_end" [shape=circle, label="end"];
  }
  "a_end" -> "b_start" [label="always"];
  subgraph cluster_1 {
    label="b";
    node [style="filled"];
    "b_start" [shape=circle, label="start"];
    "b_start" -> "b_end" [label="ordering"];
    "b_end" [shape=circle, label="end"];
  }
  "b_end" -> "c_start" [label="always"];
  subgraph cluster_2 {
    label="c";
    node [style="filled"];
    "c_start" [shape=circle, label="start"];
    "c_start" -> "c_end" [label="ordering"];
    "c_end" [shape=circle, label="end"];
  }
}

