src/program/snapshots/quil_rs__program__graphviz_dot__tests__graph__non_overlapping_fence.snap
---
source: src/program/graphviz_dot.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="ordering"];
    "block_0_start" -> "block_0_1" [label="frame"];
    "block_0_start" -> "block_0_3" [label="ordering"];
    "block_0_start" -> "block_0_4" [label="frame"];
    "block_0_start" -> "block_0_end" [label="ordering"];
    "block_0_0" [shape=rectangle, label="[0] FENCE 0"];
    "block_0_0" -> "block_0_1" [label="ordering"];
    "block_0_0" -> "block_0_2" [label="ordering"];
    "block_0_1" [shape=rectangle, label="[1] NONBLOCKING PULSE 0 \"rf\" drag_gaussian(alpha: (-0.95146893464447))"];
    "block_0_1" -> "block_0_2" [label="ordering"];
    "block_0_1" -> "block_0_end" [label="frame"];
    "block_0_2" [shape=rectangle, label="[2] FENCE 0"];
    "block_0_2" -> "block_0_end" [label="ordering"];
    "block_0_3" [shape=rectangle, label="[3] FENCE 1"];
    "block_0_3" -> "block_0_4" [label="ordering"];
    "block_0_3" -> "block_0_5" [label="ordering"];
    "block_0_4" [shape=rectangle, label="[4] NONBLOCKING PULSE 1 \"rf\" drag_gaussian(alpha: (-1.3853631708424974))"];
    "block_0_4" -> "block_0_5" [label="ordering"];
    "block_0_4" -> "block_0_end" [label="frame"];
    "block_0_5" [shape=rectangle, label="[5] FENCE 1"];
    "block_0_5" -> "block_0_end" [label="ordering"];
    "block_0_end" [shape=circle, label="end"];
  }
}

